--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,8 +12,8 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Content of about</p>
-        <img class="portrait" src="/img/rat.png">
+        <p>This site was created by Joselle D. Collado. It uses data from mapbox.com and weatherstack.com!</p>
+        <img class="portrait" src="/img/jdc.jpg">
     </div>
 
     {{>footer}}
